docs: 收敛 Java 卷重复内容至 Spring/工程专题
- Spring 专题：新增 Bean 完整生命周期章节，核心章节重排编号并同步导航

- Java 卷：删除 12 个与专题重复的章节，更新索引与侧边栏

- Engineering 专题：补全架构演进、系统设计、可观测性、安全实践章节

- 图表：新增 11 个 SVG 图替代 Mermaid，规范标题层级与唯一 H1